// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details reducer should set the capacity 1`] = `
{
  "capacity": 20,
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the description 1`] = `
{
  "capacity": "",
  "description": "new description",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end date 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "January 1, 2018",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end date input 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "January 1, 2018",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end date moment 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "January 1, 2018",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end time 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "13:45",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the end time input 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "13:45",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the not going responses 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": true,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start date 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "January 1, 2018",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start date input 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "January 1, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start date moment 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "January 1, 2018",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start time 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "13:45",
  "startTimeInput": "7:30 pm",
  "title": "",
}
`;

exports[`Details reducer should set the start time input 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "13:45",
  "title": "",
}
`;

exports[`Details reducer should set the title 1`] = `
{
  "capacity": "",
  "description": "",
  "endDate": "2019-07-19",
  "endDateInput": "July 19, 2019",
  "endDateMoment": "2019-07-19T21:30:00.000Z",
  "endTime": "21:30:00",
  "endTimeInput": "9:30 pm",
  "notGoingResponses": false,
  "startDate": "2018-07-19",
  "startDateInput": "July 19, 2018",
  "startDateMoment": "2018-07-19T19:30:00.000Z",
  "startTime": "19:30:00",
  "startTimeInput": "7:30 pm",
  "title": "new title",
}
`;
